<resources>
    <string name="app_name">Dictation</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="Property_Worktype">Worktype:</string>
    <string name="Record_Save_Actionsheet_Message">You haven\'t saved your changes.Click Discard below to proceed
               without saving or Cancel to return to recording. </string>
    <string name="Button_Discard">Discard</string>
    <string name="Button_Pending">Pending</string>
    <string name="Button_Cancel">Cancel</string>
    <string name="Button_Sendtosever">Send to Server</string>
    <string name="Button_Sendviaemail">Send via E-mail</string>
    <string name="Button_Email">E-mail</string>
    <string name="Button_FTP">FTP</string>
    <string name="Dictate_Alert_name_exists">Dictation Name Exists</string>
    <string name="Dictate_Alert_Ok">OK</string>
    <string name="Dictate_Alert_Yes">YES</string>
    <string name="Dictate_Alert_No">NO</string>
    <string name="Dictate_Alert_Insufficent_Device_Memory">Insufficent device memory</string>
    <string name="Dictate_Alert_Insufficent_Memory">Insufficent memory</string>
    <string name="Dictate_Alert_Maximum_Recording_Message">Cannot record anymore since it reached maximum recording.</string>
    <string name="Dictate_Alert_Recording_File_Large_Message">Since recording file size is large, it will be sent seperating to several files.</string>
    <string name="Dictate_Preparing_Audio">Preparing Audio</string>
    <string name="Dictate_Saving_Audio">Saving Audio</string>
    <string name="Dictate_Disconnect_Call">Please disconnect the active call and proceed</string>
    <string name="Dictate_Alert_Continue_Insert_Message">Do you want to continue insertion?</string>
    <string name="Dictate_Alert_Continue_Overwrite_Message">Do you want to continue overwrite?</string>
    <string name="Dictate_Alert_Continue">Continue</string>
    <string name="Dictate_Alert_Stop">Stop</string>
    <string name="Dictate_Loading">Loading...</string>
    <string name="Dictate_Alert_Configure_Server">Please configure server settings</string>
    <string name="Dictate_Alert_Compress_Recording_Background_message">Please wait while compress your recording or press
            the home button to compress in the background </string>
    <string name="Dictate_Alert_Compressing">Compressing</string>
    <string name="Dictate_Alert_File_Conversion">File conversion in progress</string>
    <string name="Dictate_Low_Memory">There is not enough memory or disk space to complete the operation</string>
    <string name="Dictate_No_Space">No Disk Space</string>
    <string name="Dictate_Network_Notavailable">Network not available</string>
    <string name="Dictate_Email_Configuration">No Email account configured</string>
    <string name="Property_Back">Back</string>
    <string name="Property_Edit">Edit</string>
    <string name="Property_Done">Done</string>
    <string name="Property_Priority">Priority:</string>
    <string name="Property_Jobnumber">Job Number:</string>
    <string name="Property_Status">Status:</string>
    <string name="Property_Comment">Comment:</string>
    <string name="Property_Close">Close</string>
    <string name="Property_Shake_Twice">Shake twice for \"Record\"</string>
    <string name="Property_New">New</string>
    <string name="Property_Pending">Pending</string>
    <string name="Property_Outbox">Outbox</string>
    <string name="Property_sending">Sending</string>
    <string name="property_sending_failed">Sending Failed</string>
    <string name="Property_Dictate_Sent">Sent</string>
    <string name="Property_Via_Email">Sent via E-mail</string>
    <string name="Property_Timeout">Timeout</string>
    <string name="Property_Settings">Settings</string>
    <string name="Property_Waiting_Send">Waiting to Send</string>
    <string name="Property_Retrying">Retrying</string>
    <string name="Property_Conversion_Failed">Conversion Failed</string>
    <string name="Camera_Take_Photo">Take Photo</string>
    <string name="Camera_Choose_Existing">Choose Existing</string>
    <string name="Camera_Cancel">Cancel</string>
    <string name="Camera_Delete_Photo">Delete Photo</string>
    <string name="Recording_Label_Back">Back</string>
    <string name="Recording_Label_Pending">Pending</string>
    <string name="Recording_Label_Outbox">Outbox</string>
    <string name="Recording_Label_Sent">Sent</string>
    <string name="Recording_Label_Edit">Edit</string>
    <string name="Recording_Label_Search">Search</string>
    <string name="Recording_Label_Send">Send</string>
    <string name="Recording_Label_Send_All">Send All</string>
    <string name="Recording_Label_Delete">Delete</string>
    <string name="Recording_Label_Delete_All">Delete All</string>
    <string name="Recording_Label_Settings">Settings</string>
    <string name="Recording_Alerts_Do_Sent_Dictation_Message">What do you want to do for sent dictation?</string>
    <string name="Recording_Alerts_Sent_Dictation">Sent dictation</string>
    <string name="Recording_Alerts_Review">Review</string>
    <string name="Recording_Alerts_Edit_Copy">Edit Copy</string>
    <string name="Recording_Alerts_Cancel">Cancel</string>
    <string name="Recording_Alerts_Delete_Recording_Pending_Message">Are you sure you want to delete all recordings in Pending?
            This cannot be undone and you will lose all recordings in Pending.</string>
    <string name="Recording_Alerts_Delete_All_recordings">Delete All Recordings?</string>
    <string name="Recording_Alerts_Delete_All">Delete All</string>
    <string name="Recording_Alerts_Delete">Delete</string>
    <string name="Recording_Alerts_Delete_Pending_Message">Are you sure you want to delete # recordings in Pending? 
            This cannot be undone.  </string>
    <string name="Recording_Alerts_Delete_Recordings">Delete # Recordings?</string>
    <string name="Recording_Alerts_Send_All_Recordings_Message">Are you sure you want to send all recordings?</string>
    <string name="Recording_Alerts_Send_All_Recordings">Send All Recordings?</string>
    <string name="Recording_Alerts_Send_All_Server">Send All to Server</string>
    <string name="Recording_Alerts_Send_All_Email">Send All via Email</string>
    <string name="Recording_Alerts_Send_Recordings_Message">Are you sure you want to send # recordings?</string>
    <string name="Recording_Alerts_Send_Recordings">Send # Recordings?</string>
    <string name="Recording_Alerts_Copying_Editing">Copying file for editing</string>
    <string name="Recording_Alerts_Encrypt_File_Message">This service sends dictation files via E-mail and FTP.
            For prevent information leakage,we recommend you to make demands your administrator to encrypt
            dictation files strongly.</string>
    <string name="Recording_Alerts_Dontshow">Don\'t show this again.</string>
    <string name="Flashair_Label_Connect_Flashair">Connect FlashAir</string>
    <string name="Flashair_Label_Choose_SSID">Choose an SSID</string>
    <string name="Flashair_Recordings">Recordings</string>
    <string name="Flashair_Label_Establish_WiFi_Message">Establish a Wi-Fi Connection with FlashAir card and 
                  Tap "Done"</string>
    <string name="Flashair_Label_Choose_FlashAir">FlashAir connection is required for this function.Connect to FlashAir
        card using Settings>Wi-Fi>Choose a network </string>
    <string name="Flashair_Label_Scan_Flashair">Scanning FlashAir card</string>
    <string name="Flashair_Label_Flashcard_inSettings">Set this FlashAir card in Settings</string>
    <string name="Flashair_Label_YES">YES</string>
    <string name="Flashair_Label_NO">NO</string>
    <string name="Flashair_Label_Done">Done</string>
    <string name="Flashair_Label_Select_All">Select All</string>
    <string name="Flashair_Label_Deselect_All">Deselect All</string>
    <string name="Flashair_Label_Send">Send</string>
    <string name="Flashair_Label_Downloading">Downloading</string>
    <string name="Flashair_Label_DownloadSummary">Download Summary</string>
    <string name="Flashair_Label_Files_Downloaded"># out of # file(s) downloaded</string>
    <string name="Flashair_Label_Password">Password</string>
    <string name="Flashair_Label_Authenticating">Authenticating</string>
    <string name="Flashair_Label_Obtaining_Ip">Obtaining IP Address</string>
    <string name="Flashair_Label_Connection_Compleate">Connection Complete</string>
    <string name="Flashair_Label_Items"># Items</string>
    <string name="Flashair_Alert_WiFi_Accessible">Wi-Fi is not accessible.Please make sure that Wi-Fi is
        enabled in the settings.</string>
    <string name="Flashair_Alert_WiFi_Connection">Wi-Fi Connection</string>
    <string name="Flashair_Alert_Connection_Notfound">FlashAir Wi-Fi Connection not found.</string>
    <string name="Flashair_Alert_Cannot_Establish_Connection">Cannot establish connection with FlashAir card</string>
    <string name="Flashair_Alert_Connection_Error">Connection Error</string>
    <string name="Flashair_Alert_Valid_WiFi_Connection">Please switch back to valid Wi-fi connection
           if you are connected to the FlashAir card</string>
    <string name="category_comunication">Communication</string>
    <string name="category_recording">Recording</string>
    <string name="category_workflow">Workflow</string>
    <string name="category_general">General</string>
    <string name="send_title">Send</string>
    <string name="sendoption_email">E-mail Options</string>
    <string name="rec_format_title">Recording Format</string>
    <string name="audio_quality_category">Audio Quality</string>
    <string name="Settings_High">High</string>
    <string name="Settings_Standard">Standard - 8kHz</string>
    <string name="blutooth_input_title">Bluetooth Input</string>
    <string name="mic_sens_screen_title">Microphone Sensitivity</string>
    <string name="Settings_Low">Low</string>
    <string name="vcva_screen_title">VCVA</string>
    <string name="vcva_title">Activate VCVA</string>
    <string name="Settings_Vcva_Level">VCVA Level</string>
    <string name="Settings_max">MAX</string>
    <string name="Settings_min">MIN</string>
    <string name="push_to_talk_title">Push to Talk</string>
    <string name="worktype_list_title">Worktype List</string>
    <string name="keep_sent_items_title">Keep Sent Items</string>
    <string name="onlaunch_show_title">On Launch Show</string>
    <string name="language_title">Language</string>
    <string name="use_flashair_title">Use FlashAir</string>
    <string name="legal_notices_title">Legal Notices</string>
    <string name="privacy_policy_key">privacy_policy</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="send_key">send_setting</string>
    <string name="rec_format_key">rec_format</string>
    <string name="blutooth_input_key">bluetooth_input</string>
    <string name="mic_sens_screen_key">mic_sens_screen</string>
    <string name="mic_sensitivity_key">mic_sensitivity</string>
    <string name="vcva_screen_key">vcva_screen</string>
    <string name="vcva_key">vcva</string>
    <string name="vcva_seekbar_key">vcva_seekbar</string>
    <string name="push_to_talk_key">push_totalk</string>
    <string name="author_key">author</string>
    <string name="worktype_list_key">worktype_list</string>
    <string name="keep_sent_items_key">keep_sent_items</string>
    <string name="onlaunch_show_key">onlaunch_show</string>
    <string name="language_key">language</string>
    <string name="use_flashair_key">use_flashair</string>
    <string name="formats_list_key">formats_list</string>
    <string name="audio_quality_key">audio_quality</string>
    <string name="legal_notices_key">legal_notices</string>
    <string name="about_key">about</string>
    <string name="OFF">OFF</string>
    <string name="Settings_About">About</string>
    <string name="author_id">Author ID</string>
</resources>